--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,19 @@ body {
     background-color: #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
+    border-radius: 5px;
 }
 
 hr {
     border: 1px solid #D1D1D1;
     margin-bottom: 30px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /*-----------------------------------------------------------------------
@@ -27,10 +35,6 @@ hr {
 /*-------------------------------------------------------------------------
                              top players style 
 --------------------------------------------------------------------------*/
-main {
-    display: flex;
-    justify-content: center;
-}
 
 .top-players {
     margin-bottom: 30px;
@@ -107,3 +111,47 @@ main {
 /*-----------------------------------------------------------------------
                             top-blogs style end 
 -----------------------------------------------------------------------*/
+
+/* ----------------------------------------------------------------------
+                            course section start
+-------------------------------------------------------------------------*/
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 24px;
+}
+
+.course .course-banner img {
+    width: 224px;
+    height: 104px;
+}
+
+.course-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.fa-star {
+    font-size: 12px;
+}
+
+.fa-star.filled {
+    color: #FFC014;
+}
+
+.fa-star.empty {
+    color: #AEAEAE;
+}
+
+.duration {
+    background-color: #FFE4E8;
+    padding: 5px 10px;
+    border-radius: 15px;
+}
+
+.duration .fa-clock,
+span {
+    font-size: 14px;
+    color: #FF4A60;
+}
