--- a/styles/style.css
+++ b/styles/style.css
@@ -155,3 +155,56 @@ span {
     font-size: 14px;
     color: #FF4A60;
 }
+
+/*--------------------------------------------------------------------------
+                                course section end 
+--------------------------------------------------------------------------*/
+
+/*-------------------------------------------------------------------------
+                                Media Queries starts 
+-------------------------------------------------------------------------*/
+/* Mobile device */
+@media only screen and (max-width: 688px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+    }
+
+}
+
+/* Tablet devices */
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .courses {
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: center;
+    }
+
+    .blogs {
+        grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+    }
+
+    .player {
+        flex-direction: column;
+    }
+}
+
+/*------------------------------------------------------------------------
+                                Media Queries end 
+------------------------------------------------------------------------*/
